# ModPorter-AI

./: .actrc  .buildignore  .claudeignore  .clineignore  .cursorrules  .dockerignore  .droidignore  .env.example  .env.prod  .env.prod.example  .env.production  .gitattributes  .gitignore  .gitleaks.toml  .gitmessage  .next_session_prompt.md  .npmrc  .openhandsignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .trivy.yml  .trivyignore  AGENTS.MD  AGENTS.md  AI_AGENT_COMMITS.md  AI_MODELS.md  API.md  ARCHITECTURE.md  ASSET_MANAGEMENT_IMPLEMENTATION.md  AUDIT_REPORT.md  CHANGELOG.md  CI-FIX-COMPLETED.txt  CI_FIXES_SUMMARY.md  CI_OPTIMIZATION.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DASHBOARD_INTEGRATION.md  DATABASE_BACKUP.md  (+162 more)
ai-engine/: .dockerignore  .env.example  .mutmut.toml  Dockerfile  Dockerfile.cpu  Dockerfile.optimized  README-GPU.md  README.md  SKELETON-agents.md  SKELETON-converters.md  SKELETON-pipeline.md  SKELETON.md  __init__.py  __main__.py  ai_coverage.txt  check_code_quality.py  conftest.py  coverage.json  coverage_executor.json  coverage_final.json  coverage_final_step1.json  coverage_fixed.json  coverage_gen.json  coverage_new.json  debug_crew_simple.py  demo_advanced_rag.py  main.py  pyproject.toml  pytest-custom.ini  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_crew_minimal.py  test_integration.py  test_llm_direct.py  test_ollama_direct.py  test_structure.py  tracing.py  training_manager.py
ai-engine/agent_metrics/: __init__.py  alerts.py  automation_dashboard.py  automation_metrics.py  bottleneck_detector.py  dashboard.py  llm_usage_tracker.py  memory_monitor.py  performance_monitor.py  test_agent_metrics.json  token_budget_estimator.py  trend_analyzer.py
ai-engine/agents/: __init__.py  addon_validator.py  advanced_rag_agent.py  asset_converter.py  audio_converter.py  bedrock_architect.py  bedrock_builder.py  bedrock_manifest_generator.py  block_item_generator.py  converter_utils.py  curseforge_parser.py  entity_converter.py  expert_knowledge_agent.py  fewshot_enhancer_agent.py  file_packager.py  gameplay_comparison_agent.py  java_analyzer.py  java_semantic_chunker.py  knowledge_base_agent.py  logic_auditor_agent.py  logic_translator.py  mod_dependency_analyzer.py  model_converter.py  modpack_conflict_detector.py  modpack_orchestrator.py  modrinth_parser.py  online_research_agent.py  packaging_agent.py  packaging_validator.py  qa_agent.py  qa_validator.py  rag_agents.py  recipe_converter.py  texture_converter.py  validation_agent.py  variant_loader.py
ai-engine/benchmarking/: indexing_benchmark.py  metrics_collector.py  performance_system.py  search_benchmark.py
ai-engine/cli/: __init__.py  main.py
ai-engine/config/: degradation_config.yaml  rag_agents.yaml  timeouts.yaml  validation_config.yaml  variant_enhanced_logic.json
ai-engine/converters/: __init__.py  advancement_converter.py  command_converter.py  dimension_converter.py  gui_converter.py  loot_table_generator.py  particle_converter.py  potion_converter.py  rendering_converter.py  sound_converter.py  spawn_rule_generator.py  villager_converter.py  weapon_tool_converter.py
ai-engine/crew/: __init__.py  conversion_crew.py  rag_crew.py
ai-engine/data/: bedrock_block_templates.json  custom_recipe_types.json  forge_tag_mappings.json  item_mappings.json
ai-engine/deployment/: __init__.py  deployment_pipeline.py  mlflow_integration.py  model_registry.py
ai-engine/docs/: API_MAPPING_DOCUMENTATION.md  FINE_TUNING.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_ARCHITECTURE.md  LOGGING.md  SMART_ASSUMPTIONS_GUIDE.md  TRANSLATION_LIMITATIONS.md  qa_validation_framework.md  qa_validation_implementation_summary.md  qa_validation_verification.md
ai-engine/engines/: __init__.py  comparison_engine.py  coverage_metrics.py  javascript_validator.py  regression_engine.py  reporting_engine.py  translation_warnings.py
ai-engine/evals/: __init__.py  cases.py  failure_map.py  hill_climb.py  rubrics.py  runner.py
ai-engine/evaluation/: __init__.py  evaluator.py  rag_evaluator.py
ai-engine/examples/: qa_validator_usage.py
ai-engine/finetuning/: __init__.py  lora_trainer.py  training_automation.py
ai-engine/indexing/: __init__.py  benchmark.py  chunk_prioritizer.py  chunking_strategies.py  metadata_extractor.py
ai-engine/knowledge/: __init__.py  cross_reference.py  schema.py
ai-engine/learning/: __init__.py  correction_store.py  validation_workflow.py
ai-engine/mmsd/: README.md  TRAINING_REPORT.md  code_validator.py  dual_teacher.py  evaluate.py  health_check.py  premium_client.py  run_synthesis.py  run_validation.py  train_portkit_coder.py  train_portkit_coder_kaggle.py
ai-engine/models/: __init__.py  comparison.py  document.py  smart_assumptions.py  validation.py
ai-engine/notebooks/: fine_tune_qwen_coder_java_bedrock.ipynb
ai-engine/orchestration/: README.md  __init__.py  crew_integration.py  langgraph_pipeline.py  monitoring.py  orchestrator.py  progress.py  run_agent.py  run_agent_integration.py  strategy_selector.py  task_graph.py  worker_pool.py
ai-engine/prompts/: __init__.py  rag_researcher.md  rag_writer.md
ai-engine/prototyping/: advanced_rag_prototype.py  requirements.txt
ai-engine/qa/: __init__.py  context.py  fixer.py  hooks.py  multi_candidate.py  orchestrator.py  reviewer.py  semantic_checker.py  translator.py  validators.py  veccisc.py
ai-engine/reasoning_patterns/: __init__.py  pattern_discovery.py  pattern_selector.py  reasoning_pattern.py
ai-engine/research/: multimodal_research.md
ai-engine/rl/: __init__.py  agent_optimizer.py  data_collection.py  fine_tuning_export.py  minecraft_contracts.py  minecraft_reward_models.py  prompt_optimizer.py  quality_scorer.py  reasoning_pattern_discovery.py  reward_system.py  training_loop.py
ai-engine/schemas/: __init__.py  bedrock_item_schema.json  bedrock_manifest_schema.json  multimodal_schema.py
ai-engine/scripts/: benchmark_optimizations.py  benchmark_parallel.py  demonstrate_packaging_validation.py  export_training_data.py  populate_kb.py  test_learning_system.py  train_model.py  (+5 more)
(+4204 files in other folders)
