[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engine"
version = "0.1.0"
description = "AI Engine with GPU acceleration support"
authors = [{name = "ModPorter AI", email = "ai@modporter.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core FastAPI for AI Engine API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # AI Framework
    "crewai>=0.11.0",  # Latest available is 0.11.2
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.1.0",
    "openai>=1.0.0",
    "sentence-transformers",

    # Vector Database (pin version for embedchain compatibility)

    "chromadb<1.5.0",
    
    # Data Processing
    "numpy",
    "python-dotenv",

    # Java analysis
    "javalang>=0.13.0",

    # File processing
    "Pillow>=10.0.0",  # For texture conversion
    "pydub",
    
    # HTTP Client
    "httpx",
    
    # Redis for job management
    "redis>=4.5.0",
    
    # Configuration Management
    "pydantic>=2.0.0",
    "pydantic-settings",
    
    # Monitoring
    "prometheus-client",
    "psutil",
]

[project.optional-dependencies]
# NVIDIA GPU acceleration (CUDA)
gpu-nvidia = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0", 
    "onnxruntime-gpu>=1.19.0",
    "accelerate>=0.24.0",
]

# AMD GPU acceleration (ROCm for Linux, DirectML for Windows)
# Note: Install with specific index URL when needed:
# pip install .[gpu-amd] -f https://download.pytorch.org/whl/rocm6.0 
gpu-amd = [
    "torch>=2.5.0",
    "torchvision>=0.20.0", 
    "torchaudio>=2.5.0",
    "onnxruntime-rocm>=1.19.0; sys_platform == 'linux'",
    "onnxruntime-directml>=1.19.0; sys_platform == 'win32'",
    "accelerate>=0.24.0",
]

# CPU-only (explicit CPU versions)  
# Note: Install with specific index URL when needed:
# pip install .[cpu-only] -f https://download.pytorch.org/whl/cpu
cpu-only = [
    "torch>=2.5.0",
    "torchvision>=0.20.0", 
    "torchaudio>=2.5.0",
    "onnxruntime>=1.19.0",
]

# Development dependencies
dev = [
    "pytest",
    "pytest-asyncio", 
    "pytest-mock",
    "pytest-cov",
    "pytest-timeout",
    "black",
    "ruff",
    "isort",
    # Mutation testing
    "mutmut",
]

# All GPU options combined
gpu-all = [
    "ai-engine[gpu-nvidia]",
    "ai-engine[gpu-amd]",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-engine"
Repository = "https://github.com/your-org/ai-engine"
Issues = "https://github.com/your-org/ai-engine/issues"

[tool.setuptools.packages.find]

[tool.setuptools.package-dir]

[tool.mypy]
python_version = "3.10"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
pretty = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
exclude = ["__main__\\.py$", "^setup\\.py$"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "crewai.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "javalang.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydub.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "agents.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "engines.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "orchestration.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "schemas.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "search.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tools.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "cli.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "benchmarking.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "evaluation.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "prototyping.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "research.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "rl.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "utils.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "models.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "training_manager"
ignore_errors = true

[[tool.mypy.overrides]]
module = "setuptools"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setup"
ignore_errors = true

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "agent_metrics.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "crew.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "test_integration"
ignore_errors = true

[[tool.mypy.overrides]]
module = "main"
ignore_errors = true

[[tool.mypy.overrides]]
module = "cli"
ignore_errors = true

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "testing.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "templates.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "demo_advanced_rag"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "tests/",
    "src/tests/",
    ".git/",
    "__pycache__/",
    "*.egg-info/",
    ".venv/",
    "venv/",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and flake8-quotes (Q)
select = ["E", "F", "I", "Q", "N"]
ignore = [
    "E402",  # module level import not at top of file
    "E501",  # line too long (handled by formatter)
    "Q000",  # bad quote marks
    "Q001",  # bad quote marks in multiline strings
    "Q002",  # bad quote marks in strings
    "N999",  # invalid module name (e.g., ai-engine with hyphen)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]  # Allow imports not at top and unused imports in tests
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
order-by-type = false
case-sensitive = false