[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "tests/",
    "src/tests/",
    ".git/",
    "__pycache__/",
    "*.egg-info/",
    ".venv/",
    "venv/",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), flake8-quotes (Q), flake8-naming (N)
select = ["E", "F", "I", "Q", "N"]
ignore = [
    "E402",  # module level import not at top of file
    "E501",  # line too long (handled by formatter)
    "Q000",  # bad quote marks
    "Q001",  # bad quote marks in multiline strings
    "Q002",  # bad quote marks in strings
    "N999",  # invalid module name (allow hyphenated names like ai-engine)
    "I001",  # import block is un-sorted (legacy code has inconsistent import order)
    "F401",  # imported but unused (legacy code has many unused imports)
    "F541",  # f-string without placeholders (legacy code uses f-strings for comments)
    "F601",  # duplicate dictionary key (legacy code has intentional overrides)
    "F811",  # redefinition of function (legacy code has intentional overrides)
    "F841",  # unused variables (legacy code has many unused variables)
    "Q003",  # unnecessary escape on inner quote character
    "Q004",  # unnecessary escape on inner quote character
    "E702",  # multiple statements on one line (semicolon)
    "E701",  # multiple statements on one line (colon)
    "E722",  # bare except (legacy code uses bare except for compatibility)
    "E713",  # test for membership should be `not in`
    "F821",  # undefined name (type hints and forward references)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]  # Allow imports not at top and unused imports in tests
"__init__.py" = ["E402", "N999"]  # Invalid module name (hyphenated names like ai-engine)
"__main__.py" = ["N999"]  # Invalid module name (hyphenated names like ai-engine)
"agents/asset_converter.py" = ["F811", "F841"]  # Allow duplicate function definitions and unused variables in legacy code
"crew/__init__.py" = ["N802"]  # Function name should be lowercase (factory functions RAGTasks, RAGCrew)
"agents/java_analyzer.py" = ["N806"]  # Variable in function should be lowercase (RuntimeVisibleAnnotations)
"tools/search_tool.py" = ["N806"]  # Variable in function should be lowercase (FallbackToolClass)
# Naming convention per-file ignores (legacy code)
"src/utils/validators.py" = ["N805"]  # First arg of method should be self (validators use cls)
"src/models/types.py" = ["N811"]  # constant imported as non-constant (PyUUID, SQLiteJSON)
"src/services/*.py" = ["N806"]  # variable in function should be lowercase (constants in functions)
"src/engines/*.py" = ["N806"]  # variable in function should be lowercase (constants in functions)
"src/exceptions.py" = ["N818"]  # exception names should have Error suffix (legacy names)

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = false
pretty = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
exclude = ["tests/", "scripts/", ".venv/", "docs/", "examples/", "__pycache__/", "__main__.py"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pkg_resources.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "PIL.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "onnxruntime.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "torch.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "uvicorn.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true

[project]
name = "ai-engine"
version = "0.1.0"
description = "AI Engine with GPU acceleration support"
authors = [{name = "ModPorter AI", email = "ai@modporter.dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core FastAPI for AI Engine API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # AI Framework
    "crewai>=0.11.0",  # Latest available is 0.11.2
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.1.0",
    "openai>=1.0.0",
    "sentence-transformers",

    # Vector Database (pin version for embedchain compatibility)

    "chromadb<1.5.0",
    
    # Data Processing
    "numpy",
    "python-dotenv",

    # Java analysis
    "javalang>=0.13.0",

    # File processing
    "Pillow>=10.0.0",  # For texture conversion
    "pydub",
    
    # HTTP Client
    "httpx",
    
    # Redis for job management
    "redis>=4.5.0",
    
    # Configuration Management
    "pydantic>=2.0.0",
    "pydantic-settings",
    
    # Monitoring
    "prometheus-client",
    "psutil",
]

[project.optional-dependencies]
# NVIDIA GPU acceleration (CUDA)
gpu-nvidia = [
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "torchaudio>=2.5.0", 
    "onnxruntime-gpu>=1.19.0",
    "accelerate>=0.24.0",
]

# AMD GPU acceleration (ROCm for Linux, DirectML for Windows)
# Note: Install with specific index URL when needed:
# pip install .[gpu-amd] -f https://download.pytorch.org/whl/rocm6.0 
gpu-amd = [
    "torch>=2.5.0",
    "torchvision>=0.20.0", 
    "torchaudio>=2.5.0",
    "onnxruntime-rocm>=1.19.0; sys_platform == 'linux'",
    "onnxruntime-directml>=1.19.0; sys_platform == 'win32'",
    "accelerate>=0.24.0",
]

# CPU-only (explicit CPU versions)  
# Note: Install with specific index URL when needed:
# pip install .[cpu-only] -f https://download.pytorch.org/whl/cpu
cpu-only = [
    "torch>=2.5.0",
    "torchvision>=0.20.0", 
    "torchaudio>=2.5.0",
    "onnxruntime>=1.19.0",
]

# Development dependencies
dev = [
    "pytest",
    "pytest-asyncio", 
    "pytest-mock",
    "pytest-cov",
    "pytest-timeout",
    "black",
    "ruff",
    "isort",
    # Mutation testing
    "mutmut",
]

# All GPU options combined
gpu-all = [
    "ai-engine[gpu-nvidia]",
    "ai-engine[gpu-amd]",
]

[project.urls]
Homepage = "https://github.com/your-org/ai-engine"
Repository = "https://github.com/your-org/ai-engine"
Issues = "https://github.com/your-org/ai-engine/issues"

[tool.setuptools.packages.find]

[tool.setuptools.package-dir]

